feat: done banner handler layer, done user/admin auth
todo:
1) debug updateBanner method
2) caching for banner repo
